<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.MainActivity">

    <!-- android:clipChildren="true"
    android:clipToPadding="true"-->

    <com.river.simpleweather.View.StatusBarView
        android:layout_width="match_parent"
        android:layout_height="0dp" />


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue55">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_bing"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_210"
                    android:scaleType="fitXY"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="@dimen/dp_36"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_40"
                    android:src="@drawable/menu"
                    android:scaleType="fitCenter"
                    app:layout_constraintLeft_toLeftOf="@id/image_bing"
                    app:layout_constraintTop_toTopOf="@id/image_bing" />


                <!--城市名称-->
                <TextView
                    android:id="@+id/tv_city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_30"
                    android:text="北京"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toTopOf="@id/tv_refresh_time"
                    app:layout_constraintLeft_toLeftOf="@id/image_bing" />

                <!--刷新时间-->
                <TextView
                    android:id="@+id/tv_refresh_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_8"
                    app:layout_constraintBottom_toBottomOf="@id/image_bing"
                    app:layout_constraintLeft_toLeftOf="@id/image_bing" />

                <!--气温-->
                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_30"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_40"
                    app:layout_constraintRight_toRightOf="@id/image_bing"
                    app:layout_constraintTop_toTopOf="@id/app_icon" />

                <!--天气-->
                <TextView
                    android:id="@+id/tv_weather_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_30"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintRight_toRightOf="@id/image_bing"
                    app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

                <!--当前天气状况-->
                <com.river.simpleweather.View.DoubleTextView
                    android:id="@+id/weather_wind"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_10"
                    app:bottomText="风向"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/weather_wet"
                    app:layout_constraintTop_toBottomOf="@id/image_bing">

                </com.river.simpleweather.View.DoubleTextView>

                <com.river.simpleweather.View.DoubleTextView
                    android:id="@+id/weather_wet"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_10"
                    app:bottomText="湿度"
                    app:layout_constraintLeft_toRightOf="@id/weather_wind"
                    app:layout_constraintRight_toLeftOf="@id/weather_water"
                    app:layout_constraintTop_toBottomOf="@id/image_bing">

                </com.river.simpleweather.View.DoubleTextView>

                <com.river.simpleweather.View.DoubleTextView
                    android:id="@+id/weather_water"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_10"
                    app:bottomText="降水量"
                    app:layout_constraintLeft_toRightOf="@id/weather_wet"
                    app:layout_constraintRight_toLeftOf="@id/weather_press"
                    app:layout_constraintTop_toBottomOf="@id/image_bing">

                </com.river.simpleweather.View.DoubleTextView>

                <com.river.simpleweather.View.DoubleTextView
                    android:id="@+id/weather_press"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    app:bottomText="大气压强"
                    app:layout_constraintLeft_toRightOf="@id/weather_water"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_bing">

                </com.river.simpleweather.View.DoubleTextView>


                <TextView
                    android:id="@+id/tv_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:gravity="center_vertical"
                    android:text="@string/forecast"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_wind" />

                <!--未来三天预报-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:background="@drawable/bg_double_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forecast"></androidx.recyclerview.widget.RecyclerView>


                <!--生活指数-->
                <TextView
                    android:id="@+id/tv_life_index"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:gravity="center_vertical"
                    android:text="@string/life_index"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycle_forecast" />

                <!---->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/bg_double_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_life_index">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    <!--&lt;!&ndash;冲上云霄&ndash;&gt;-->
    <!--<com.scwang.smartrefresh.header.TaurusHeader-->
    <!--android:layout_width="match_parent"-->
    <!--app:thPrimaryColor="@color/colorBlue"-->
    <!--android:layout_height="@dimen/dp_60">-->

    <!--</com.scwang.smartrefresh.header.TaurusHeader>-->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/dp_150"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorBlue"

        android:orientation="vertical">

        <include layout="@layout/head" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/setting"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/city_manager"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/about"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>